--- a/blog.html
+++ b/blog.html
@@ -133,7 +133,7 @@ Steps in a typical shallow trench isolation (<SMALL>STI</SMALL>) process flow.</
 
 <!--End of Navigation Panel-->
 <ADDRESS>
-<HR><font size=-1>Ch. Hollauer: Modeling of Thermal Oxidation and Stress Effects </font>
+<HR><font size=-1> footnote </font>
 </ADDRESS>
 </BODY>
 </HTML>
